--- a/src/main/resources/templates/home_company.html
+++ b/src/main/resources/templates/home_company.html
@@ -18,13 +18,16 @@ and open the template in the editor.
                 <div id="top">
                     <div id="menu">
                         <div>
-                           Profil 
+                            <a th:href="@{/profil_company}">Profile </a>
                         </div>
                         <div>
-                            Messagérie
+                            Messages
                         </div>
                         <div>
                             Notifications
+                        </div>
+                        <div>
+                            <a th:href="@{/logout}">LougOut</a> 
                         </div>
                     </div>
                     <div id="search">
