--- a/src/main/resources/templates/visit_company.html
+++ b/src/main/resources/templates/visit_company.html
@@ -39,14 +39,14 @@ and open the template in the editor.
                         <img th:src="@{/images/excilis.png}"/>
                     </div>
                     <div class="rigth info">
-                        <h1>[[${company.nom}]]</h1>
+                        <h1>[[${company.name}]]</h1>
                         <div>
-                            <span th:each="d : ${company.listDom}">
-                                [[${d.nom}]],
+                            <span th:each="d : ${company.domList}">
+                                [[${d.label}]],
                             </span>
                         </div>
                         <div>
-                            [[${company.ville}]] - 120 Abonés
+                            [[${company.city}]] - 120 Abonés
                         </div>
                         <div>
                             <button>Suivre</button>
@@ -54,7 +54,7 @@ and open the template in the editor.
                     </div>
                 </div>
                 <div class="card more">
-                       <h1> A PROPOS </h1>
+                    <h1> A PROPOS </h1>
                 </div>
                 <div class="card project">
                     <h1> LES PROJETS </h1>
